<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/editViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ScrollView
        android:id="@+id/editViewContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/distance_medium">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_basic_data" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_website"
                android:inputType="textWebEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_location"
                android:inputType="text"
                android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:id="@+id/mpfMap"
                    class="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_canteen_details_map"
                    android:layout_marginTop="@dimen/distance_small" />

                <ImageView
                    android:id="@+id/imgTransparent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_canteen_details_map"
                    android:layout_alignStart="@+id/mpfMap"
                    android:layout_alignLeft="@+id/mpfMap"
                    android:layout_alignTop="@+id/mpfMap"
                    android:layout_alignEnd="@+id/mpfMap"
                    android:layout_alignRight="@+id/mpfMap"
                    android:layout_alignBottom="@+id/mpfMap"
                    android:src="@color/transparent" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnUpdateBasicData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_update_basic_data" />

            <TextView
                android:id="@+id/txvDishData"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_medium"
                android:text="@string/text_dish_data" />

            <EditText
                android:id="@+id/editDish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dish"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editDishPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dish_price"
                android:inputType="numberDecimal"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnUpdateDish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_update_dish" />

            <TextView
                android:id="@+id/txvWaitingTimeData"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_medium"
                android:text="@string/text_waiting_time_data" />

            <EditText
                android:id="@+id/editWaitingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_waiting_time"
                android:inputType="number"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnUpdateWaitingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_update_waiting_time" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>